traefik/traefik-ingress.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: traefik-dashboard-web
#   namespace: kube-system
# spec:
#   entryPoints:
#     - web
#   routes:
#     - kind: Rule
#       match: Host(`traefik.example.io`) && (PathPrefix(`/`) || PathPrefix(`/api`))
#       services:
#         - name: api@internal
#           kind: TraefikService

# ---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-websecure
  namespace: kube-system
spec:
  entryPoints:
    - traefik
  routes:
    - kind: Rule
      match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashbord-secret
